move stuff around

--- a/about.Rmd
+++ b/about.Rmd
@@ -2,17 +2,17 @@
 title: "About This Website"
 ---
 
-This is an R Markdown website. To learn more:
-
-<http://rmarkdown.rstudio.com/rmarkdown_websites.html>
-
-Source for this website:
-
-<https://github.com/jennybc/purrr-tutorial>
-
-Its home on the web:
+This is an [R Markdown website](http://rmarkdown.rstudio.com/rmarkdown_websites.html). The source can be found [on GitHub](https://github.com/jennybc/purrr-tutorial) and its home on the web is here:
 
 <https://jennybc.github.io/purrr-tutorial>
+
+Materials created to support:
+
+  * [2016-08-12 meeting](https://github.com/minisciencegirl/studyGroup/issues/131) of the Vancouver R Study Group.  
+  * [STAT 545](http://stat545.com) Exploratory Data Analysis
+  * [DSCI 523](http://www.calendar.ubc.ca/vancouver/courses.cfm?page=code&code=DSCI) Data Wrangling, part of the UBC Master of Data Science
+
+Versions of key packages:
 
 ```{r}
 devtools::session_info(c("purrr", "repurrrsive"))
